[metadata]
name = sat-pkg-RUDOLF-FANCHINI
version = 0.0.1
author = Rudolf Josef Fanchini
author_email = fanchinirudolf@gmail.com
description = A mexican taxes helper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fanchiniRudolf/sat
project_urls =
    Bug Tracker = https://github.com/fanchiniRudolf/sat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MPL-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src